<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permlab_bluetoothShareManager">Access download manager.</string>
    <string name="permdesc_bluetoothShareManager">Allows the application to access the
        BluetoothShare manager and to use it to transfer files. </string>
    <string name="bt_share_picker_label">Bluetooth</string>
    <string name="unknown_device">Unknown device</string>
    <string name="airplane_error_title">Airplane Mode</string>
    <string name="airplane_error_msg">Phone is currently in airplane mode, this
        action is forbidden!</string>
    <string name="screen_device_picker">Scan Bluetooth device</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_preference_scan_title">Scan for devices</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting</string>
    <string name="bluetooth_connecting">Connecting</string>
    <string name="bluetooth_unknown"></string>
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_failed_to_enable">Unable to turn on Bluetooth</string>
    <string name="failed_to_pair">Unable to pair</string>
    <string name="bluetooth_error_title">Attention</string>
    <string name="bluetooth_pairing_error_message">There was a problem pairing.</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with</string>
    <string name="bluetooth_pin_entry">Bluetooth pairing request</string>
    <string name="bluetooth_device_info">Bluetooth device info</string>
    <string name="bluetooth_pairing_msg">Pairing</string>
    <string name="bluetooth_enter_pin_msg">Type PIN to pair.</string>
    <string name="devicepicker_title">Select Device</string>
    <string name="available_devices">Available Devices</string>
    <string name="scanning">Scanning</string>
    <string name="bluetooth_unpaired">Unpaired</string>
    <string name="bluetooth_paired">Paired</string>
    <string name="bluetooth_pairing">Pairing</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bt_enable_title">Bluetooth</string>
    <string name="bt_enable_line1">To use Bluetooth services, you must first turn it
        on.</string>
    <string name="bt_enable_line2">Turn on Bluetooth now?</string>
    <string name="bt_enable_cancel">Cancel</string>
    <string name="bt_enable_ok">Turn on</string>
    <string name="incoming_file_confirm_title">File Transfer</string>
    <string name="incoming_file_confirm_content">
        <xliff:g id="devicename">%s1</xliff:g>
        would like to send you
        <xliff:g id="filename">%s2</xliff:g>
        (
        <xliff:g id="filesize">%s3</xliff:g>
        ). \n\n Would you like to accept the file?
    </string>
    <string name="incoming_file_confirm_cancel">Decline</string>
    <string name="incoming_file_confirm_ok">Accept</string>
    <string name="incoming_file_confirm_Notification_title">Incoming file</string>
    <string name="incoming_file_confirm_Notification_caption">Please confirm to receive this file</string>
    <string name="incoming_file_toast_msg">There is an inoming file from another device,
        please confirm to receive this file</string>
    <string name="notification_receiving">
        Receiving
        <xliff:g id="filename">%s</xliff:g>
    </string>
    <string name="notification_received">
        Received
        <xliff:g id="filename">%s</xliff:g>
    </string>
    <string name="notification_received_complete">100% complete</string>
    <string name="notification_received_fail">File not received: <xliff:g id="filename">%s</xliff:g></string>
    <string name="notification_sending">Sending <xliff:g id="filename">%s</xliff:g></string>
    <string name="notification_sending_multi">Sending file</string>
    <string name="notification_sent">Sent <xliff:g id="filename">%s</xliff:g></string>
    <string name="notification_sent_complete">100% complete</string>
    <string name="notification_sent_fail">File not sent: <xliff:g id="filename">%s</xliff:g></string>
    <string name="download_title">File Transfer</string>
    <string name="download_line1">From: <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="download_line2">File: <xliff:g id="fileName">%s</xliff:g></string>
    <string name="download_line3">File size: <xliff:g id="fileSize">%s</xliff:g></string>
    <string name="download_line4"></string>
    <string name="download_line5">Receiving file...</string>
    <string name="download_cancel">Stop</string>
    <string name="download_ok">Hide</string>
    <string name="download_fail_line1">File Not Received</string>
    <string name="download_fail_line2">File: <xliff:g id="filename">%s</xliff:g></string>
    <string name="download_fail_line3">Failure reason: <xliff:g id="failReason">%s</xliff:g></string>
    <string name="download_fail_ok">OK</string>
    <string name="download_succ_line5">File received</string>
    <string name="download_succ_ok">Open</string>
    <string name="upload_line1">To: <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="upload_line3">File Type: <xliff:g id="fileType">%s1</xliff:g> (<xliff:g id="size">%s2</xliff:g>)</string>
    <string name="upload_line5">Sending file...</string>
    <string name="upload_succ_line5">File sent</string>
    <string name="upload_succ_ok">Ok</string>
    <string name="upload_fail_line1">The file was not sent to <xliff:g id="destAddr">%s</xliff:g>.</string>
    <string name="upload_fail_line1_2">File:  <xliff:g id="fileName">%s</xliff:g></string>
    <string name="upload_fail_ok">Try Again</string>
    <string name="upload_fail_cancel">Close</string>
    <string name="bt_error_btn_ok">OK</string>
    <string name="unknown_file">Unknown file</string>
    <string name="unknown_file_desc">There is no application to handle this file type. \n</string>
    <string name="not_exist_file">File Not Exist</string>
    <string name="not_exist_file_desc">The file is not existed! \n</string>
    <string name="enabling_progress_title">Information</string>
    <string name="enabling_progress_content">Turning on bluetooth..</string>
    <string name="bt_toast_1">The file will be received. Check progress in the notifications window.</string>
    <string name="bt_toast_2">The file will not be received.</string>
    <string name="bt_toast_3">Stopped receiving file from <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="bt_toast_4">Sending file to <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="bt_toast_5">Sending <xliff:g id="fileNum">%s1</xliff:g> files to <xliff:g id="destAddr">%s2</xliff:g></string>
    <string name="bt_toast_6">Stopped sending file to <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="bt_toast_7">Stopped sending <xliff:g id="fileNum">%s</xliff:g> files to <xliff:g id="destAddr">%s</xliff:g></string>
    <string name="bt_sm_2_1">There is not enough space on the memory card to save the file from <xliff:g id="deviceName">%s</xliff:g></string>
    <string name="bt_sm_2_2">Space needed: <xliff:g id="spaceNeeded">%s</xliff:g></string>
    <string name="bt_sm_3_1"><xliff:g id="deviceName">%s1</xliff:g> attempted to send you <xliff:g id="fileNum">%s2</xliff:g> files. </string>
    <string name="bt_sm_3_2">However, this device can only receive one file at a time. Ask the other party to send the remaining <xliff:g id="fileNum">%s</xliff:g> files individually.</string>
    <string name="bt_tf_1"><xliff:g id="deviceName">%s</xliff:g> is unavailable.</string>
    <string name="bt_tf_2">Cannot pair with <xliff:g id="deviceName">%s</xliff:g>.</string>
    <string name="bt_tf_3">The connection was interrupted.</string>
    <string name="bt_tf_4"><xliff:g id="deviceName">%s</xliff:g> does not support file transfers.</string>
    <string name="bt_tf_5"><xliff:g id="deviceName">%s</xliff:g> cannot accept <xliff:g id="fileType">%s</xliff:g></string>
    <string name="bt_tf_6"><xliff:g id="deviceName">%s</xliff:g> declined to accept the file.</string>
    <string name="bt_tf_7">The file could not be sent.</string>
    <string name="bt_tf_8">The file could not be received.</string>
    <string name="bt_tf_10">Locked memory card. Unlock the memory card to save transferred files.</string>
    <string name="bt_tf_12">There is a file being transferred to a different device. Please wait...</string>
    <string name="bt_tf_13">Bluetooth is currently busy. Consider turning off another Bluetooth feature and trying again.</string>
    <string name="status_pending">File transfer not start yet</string>
    <string name="status_running">File transfer is ongoing</string>
    <string name="status_success">This transfer has successfully completed</string>
    <string name="status_not_accept">The content type cannot be  handled</string>
    <string name="status_forbidden">This transfer is forbidden by target device</string>
    <string name="status_canceled">This transfer was canceled by user</string>
    <string name="status_file_error">Storage issue</string>
    <string name="status_no_sd_card">No memory card, insert a memory card to save transferred files</string>
    <string name="status_connection_error">Connection failure</string>
    <string name="status_protocol_error">The request can not be handled correctly</string>
    <string name="status_unknown_error">Unknown error</string>
    <string name="btopp_live_folder">Bluetooth Received</string>
</resources>