<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView 
        android:id="@+id/line1_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="6px"
        android:textSize="16sp"
        android:text="@string/download_line1"/>

    <TextView
        android:id="@+id/line2_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="6px"
        android:textSize="16sp"
        android:text="@string/download_line2"/>

    <TextView
        android:id="@+id/line3_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="6px"
        android:textSize="16sp"
        android:text="@string/download_line3"/>

    <TextView
        android:id="@+id/line4_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="6px"
        android:textSize="16sp"
        android:text="@string/download_line4"/>
     
    <TextView
        android:id="@+id/line5_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/download_line5"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

    <TextView
        android:id="@+id/progress_percent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10px"
        android:gravity="left"
        />

    <ProgressBar android:id="@+id/progress_transfer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="100" />

    </LinearLayout>

</TableLayout>
